[package]
name = "todolist"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.9"
askama = "0.10.5"
thiserror = "1.0.29"
mongodb = "2.0.0"
tokio = "1.12.0"
serde =  { version="1.0", features = ["derive"]}
serde_json = "1.0.68"
derive_more = "0.99.16"
futures = "*"
log = "0.4.14"